[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "apluggy"
description = 'A wrapper of "pluggy" to support asyncio and context managers'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "Tai Sakuma", email = "tai.sakuma@gmail.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pluggy>=1.3",
  "decorator>=5.1",
  "types-decorator>=5.1",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest-asyncio>=0.18",
  "pytest-cov>=3.0",
  "pytest-timeout>=2.1",
  "pytest>=7.0",
  "hypothesis>=6.68",
]

[project.urls]
Documentation = "https://github.com/simonsobs/apluggy#readme"
Issues = "https://github.com/simonsobs/apluggy/issues"
Source = "https://github.com/simonsobs/apluggy"

[tool.hatch.version]
source = "regex_commit"
path = "src/apluggy/__about__.py"
tag_sign = false

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/apluggy --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311", "312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 60
addopts = """
--doctest-modules
--doctest-glob='*.md'
"""
# doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
doctest_optionflags = ["ELLIPSIS"]
filterwarnings = ["ignore::hypothesis.errors.NonInteractiveExampleWarning"]

[tool.black]
skip-string-normalization = true
target_version = ['py310', 'py311', 'py312']

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/apluggy/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = ["pluggy.*", "apluggy.*"]
ignore_missing_imports = true
