[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "apluggy"
dynamic = ["version"]
description = 'A wrapper of "pluggy" to support asyncio and context managers'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{ name = "Tai Sakuma" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
keywords = ["pluggy", "plugin", "hooks", "asyncio", "context manager"]
dependencies = ["pluggy>=1.3"]

[dependency-groups]
tests = [
  "pytest-asyncio>=0.18",
  "pytest-cov>=3.0",
  "pytest-timeout>=2.1",
  "pytest>=8.0",
  "hypothesis>=6.117",
]

[project.urls]
Documentation = "https://github.com/nextline-dev/apluggy#readme"
Issues = "https://github.com/nextline-dev/apluggy/issues"
Source = "https://github.com/nextline-dev/apluggy"

[tool.hatch.version]
source = "regex_commit"
path = "src/apluggy/__about__.py"
tag_sign = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 60
addopts = """
--doctest-modules
--doctest-glob='*.md'
"""
# doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
doctest_optionflags = ["ELLIPSIS"]
filterwarnings = ["ignore::hypothesis.errors.NonInteractiveExampleWarning"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
]
ignore = [
  "E203", # Whitespace before '{symbol}'
  "E265", # Block comment should start with #
  "E266", # Too many leading # before block comment
  "E501", # Line too long ({width} > {limit})
  "E741", # Ambiguous variable name '{name}'
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.isort]
#

[tool.coverage.run]
branch = true
parallel = true
source = ["src/apluggy", "tests"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  'if __name__ == "__main__":',
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "^ *\\.\\.\\.$",
]

[[tool.mypy.overrides]]
module = ["pluggy.*", "apluggy.*"]
ignore_missing_imports = true
